# twitter-clone

./: Sources.txt  pyproject.toml
authentication/: forms.py  views.py
config/: settings.py  urls.py
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py
templates/: allusers.html  createtweet.html  home.html  login.html  notification.html  signup.html  tweetinfo.html  userinfo.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py
