[tool.poetry]
name = "twitterclone-zaliamist"
version = "0.1.0"
description = ""
authors = ["ZaliaMist <73849101+ZaliaMist@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
